--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "shopify hydrogen preview --build",
     "lint": "eslint --no-error-on-unmatched-pattern .",
     "typecheck": "tsc --noEmit",
-    "codegen": "shopify hydrogen codegen"
+    "codegen": "shopify hydrogen codegen",
+    "codegen:graphql-schema": "graphql-codegen --config graphql-schema/codegen.ts"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
@@ -33,6 +34,8 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-resolvers": "^4.5.1",
     "@react-router/dev": "7.6.0",
     "@react-router/fs-routes": "7.6.0",
     "@shopify/cli": "~3.80.4",
