--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
