--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@shopify/hydrogen": "2025.5.0",
+    "@shopify/hydrogen-react": "^2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
+    "konva": "^9.3.20",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.7",
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
     "tailwindcss": "^4.1.6",
