--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "isbot": "^5.1.22",
     "konva": "^9.3.20",
     "lucide-react": "^0.511.0",
+    "mimetext": "^3.0.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.7",
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
+    "resend": "^4.5.1",
     "tailwindcss": "^4.1.6",
     "tiny-invariant": "^1.3.3"
   },
