--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,7 @@
   "name": "shane-hydrogen",
   "main": "./workers/app.ts",
   "compatibility_date": "2025-05-23",
+  "compatibility_flags": ["no_handle_cross_request_promise_resolution"],
   // — observability —
   "observability": {
     "logs": {
